Bug 101128 - ftp sending spurious onstop before onstart Bug 100816 - don't mask the error codes, so that we can get dns failure messages Bug 101027 - use a valid default for the anonymous ftp email

All patches r=dougt, sr=darin